--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start:development": "nodemon",
     "test": "jest"
   },
   "keywords": [],
@@ -12,12 +13,13 @@
   "dependencies": {
     "@types/jest": "^27.0.2",
     "@types/selenium-webdriver": "^4.0.16",
-    "chromedriver": "^95.0.0",
+    "chromedriver": "^101.0.0",
     "express": "^4.17.1",
     "geckodriver": "^2.0.4",
     "jest": "^27.3.1",
+    "nodemon": "^2.0.16",
     "rollbar": "^2.24.0",
-    "selenium-webdriver": "^4.0.0",
+    "selenium-webdriver": "^4.1.2",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
